grammar
<Statement> -> <If-statement> | <For-loop> | <While-loop> | <Declaration> | <Assignment> | return <Expression>
<Declaration> -> <Data-Type> <Assignment>

<Data-Type> -> int | boolean | float |  string | char | double | void

<Assignment> -> <Identifier> = <Expression>; | <Identifier> (<Initialization>) {<Statement>};

<If-statement> -> if (<conditional>) {<Statement>} <Else>
<Else> -> else {<Statement>}; | ;

<Conditional> -> <Expression> <Conditional-Operator> <Expression>
<Conditional-Operator> -> "==" | "<=" | ">=" | "!=" | > | <

<For-loop> -> for (<Declaration>; <conditional>; <Declaration>) {<Statement>};
<While-loop> -> while (<conditional>) {<Statement>};

<Expression> -> <Term> <Expression-Prime>
<Expression-Prime> -> + <Term> <Expression-Prime> | - <Term> <Expression-Prime> | epsilon
<Term> -> <Factor> <Term-Prime>
<Term-Prime> -> * <Factor> <Term-Prime> | / <Factor> <Term-Prime> | epsilon
<Factor> -> (<Expression>) | <Identifier> | <Integer> | <Float> | <Boolean> | '<String>' | "<String>" | <Identifier>(<Function-Parameters>)
<Function-Parameters> -> <Expression> | <Expression>, <Function-Parameters> | epsilon
<Initialization> -> <Data-Type> <Identifier> | <Data-Type> <Identifier>, <Initialization> | epsilon

<Separator> -> } | ) | ( | {

<Identifier> -> (Aa-Zz)(Aa-Zz0-9$)*
<Integer> -> (0-9)+
<Float> -> (0-9)+.(0-9)+
<Boolean> -> true | false
<String> -> ([special_symbols]Aa-Zz0-9$)+
